# python-project

./: .cspell-project.txt  .editorconfig  .gitignore  .pre-commit-config.yaml  GNUmakefile  README.md  REUSE.toml  cookiecutter.json  copier.yaml  copier.yml  local_extensions.py  macros.jinja  post_generation.sh  prek.toml
hooks/: post_gen_project.sh  pre_gen_project.sh
scripts/: update-python-version.py  update-python-version.sh
template/: .coveragerc  .coveragerc.jinja  .editorconfig  .gitignore  .pre-commit-config.yaml  GNUmakefile.jinja  LICENSE.jinja  README.md  README.md.jinja  REUSE.toml.jinja  prek.toml  pyproject.toml.jinja  ruff.toml.jinja  {{ _copier_conf.answers_file }}.jinja
template/tests/: test_version.py.jinja
{{ cookiecutter.project_name }}/: .coveragerc  .cspell-project.txt  .cspell.json  .gitignore  .pylintrc  GNUmakefile  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
{{ cookiecutter.project_name }}/tests/: test_true.py
