[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dynamic = ["classifiers", "dependencies"]

description = "{{ cookiecutter.project_summary }}"
license = "MIT"
name = "{{ cookiecutter.module }}"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

authors = [
    {name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}"},
]

[dependency-groups]
dev = ["deptry", "pytest", "pytest-cov", "ruff"]

[tool.ruff]
builtins = ["_"]
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]

ignore = [
    "ANN", # annotations (flake8-annotations)
    "COM", # trailing commas (flake8-commas)
    "D",   # documentation (pydocstyle)
    "INP", # implicit namespaces (flake8-no-pep420)
    "T20", # use of print (flake8-print)

    "E501",   # line too long
    "ISC001", # conflicts with ruff
    "S101",   # conflicts with pytest
]
