[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dynamic = ["classifiers", "dependencies"]

description = "{{ cookiecutter.project_summary }}"
license = "MIT"
name = "{{ cookiecutter.module }}"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

authors = [
    {name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}"},
]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.ruff]
builtins = ["_"]
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]

ignore = [
    "ANN",  # don't force type annotations
    "D",    # don't force documentation
    "S101", # conflict with pytest

    # conflict with ruff format
    "COM",  # trailing commas
    "E501", # line too long
]
