[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dynamic = ["classifiers"]

description = "{{ cookiecutter.project_summary }}"
license = "MIT"
name = "{{ cookiecutter.module }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
version = "0.1.0"

authors = [
    {name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}"},
]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
skip_covered = true
skip_empty = true

exclude_also = [
    "@(abc\\.)?abstractmethod",
    "class .*\\bProtocol\\):",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
addopts = ["--quiet", "--strict-markers", "-Werror"]

[tool.ruff]
target-version = "py{{ cookiecutter.python_version | regex_replace('[^0-9]', '') }}"

builtins = ["_"]
[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]

ignore = [
    "ANN",  # don't force type annotations
    "D",    # don't force documentation
    "S101", # conflict with pytest

    # conflict with ruff format
    "COM",  # trailing commas
    "E501", # line too long
]

[tool.uv]
python-preference = "only-managed"
